[package]
name = "drone_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
crossbeam-channel = "0.5.13"
rand = "0.8.5"
topology_setup = { git = "https://github.com/daw-dev/topology-setup.git" }

[dev-dependencies]
bagel_bomber = { git = "https://github.com/daw-dev/bagel-bomber.git" }
